pom.xml edits to fix Github Actions errors on parser-simd